[package]
name = "mini-oled"
authors = ["Speretta <speretta@protonmail.com>"]
description = "I2C driver for the SH1106 OLED display controller (SPI planned)"
categories = ["embedded", "no-std"]
keywords = ["no-std", "sh1106", "oled", "embedded", "embedded-hal-driver"]
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Speretta/mini-oled"
readme = "README.md"

[dependencies]
embedded-hal = "1.0.0"
embedded-graphics-core = {version = "0.4.0", optional = true}

[features]
default = ["embedded-graphics-core"]